--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: ruby
 rvm:
   - "2.0.0"
 before_install:
-  #- gem build symbol_lookup.gemspec
-  #- gem install symbol_lookup-*.gem
+  - gem build symbol_lookup.gemspec
+  - gem install symbol_lookup-*.gem
